# portfolio-rs

./: .env  .gitignore  Cargo.toml  README.md  TODO.md  portfolio.db  server-setup.sh
.github/workflows/: deploy.yml  release.yaml  release.yml  render.yaml
scripts/: server-setup.sh
src/: handlers.rs  main.rs
static/css/: style.css
static/js/: script.js
templates/: dashboard.html.tera  index.html.tera  login.html.tera
