[package]
name = "philani-portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.7"
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
lettre = { version = "0.11.18", features = ["builder", "native-tls", "smtp-transport"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio-native-tls", "sqlite"] }
tera = "1.20.0"
