[package]
name = "philani-portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.7"
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
tera = {version = "1.20.0", default-features = false}
sqlx = { version = "0.8.6", features = ["sqlite", "chrono", "runtime-tokio"] }
chrono = "0.4.43"
dotenv = "0.15.0"
regex = "1.12.2"
actix-session = { version = "0.9", features = ["cookie-session"] }
rand = "0.8"
